fix: use green color with more contrast for active main-menu

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,7 +15,8 @@
 
   --nlds-blog-post-footer-background-color: #f2ebe4;
 
-  --nlds-navbar-link-active-border-color: #148839;
+  --nlds-navbar-link-active-border-color: #5eba5b;
+  --nlds-sidebar-menu-item-active-border-color: #148839;
 
   -webkit-font-smoothing: auto !important;
   -moz-osx-font-smoothing: auto !important;
@@ -373,14 +374,14 @@ li a {
   margin-inline-start: 0;
   border-inline-start-width: 4px;
   border-inline-start-style: solid;
-  border-inline-start-color: var(--nlds-navbar-link-active-border-color);
+  border-inline-start-color: var(--nlds-sidebar-menu-item-active-border-color);
 }
 
 .menu__link:hover {
   margin-inline-start: 0;
   border-inline-start-width: 4px;
   border-inline-start-style: solid;
-  border-inline-start-color: var(--nlds-navbar-link-active-border-color);
+  border-inline-start-color: var(--nlds-sidebar-menu-item-active-border-color);
 }
 
 .menu__list-item-collapsible {
